<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarActivity">

    <ImageView
        android:id="@+id/car_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/kar" />

    <TextView
        android:id="@+id/car_title"
        android:layout_width="150sp"
        android:layout_height="200sp"
        android:text="@string/car_text_title"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/car_edit"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:hint="@string/car_hint"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="60sp"/>

    <android.widget.Button
        android:id="@+id/car_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="-60sp"
        android:background="@drawable/stylish_button"
        android:text="@string/car_button"/>

</FrameLayout>